hphp/test/slow/case-types/prop-3.php.expectf

Catchable fatal error: B::a must have a type of C1 as defined in A in %s/prop-3.php on line 20
